Settings page visual polish (#317)
* docs(plan): settings page visual polish implementation plan

14 tasks covering the Quick Settings page's post-cutover visual and
functional defects, verified against --visual-test captures (default and
expert mode) and the pre-cutover Widgets reference screenshots.

* fix(quick): right-align trailing switches and segmented controls in Settings

Also fixes the same content-sized-trailing-control pattern found in
SettingsPresenceSection, SettingsWebcamSection, SettingsQualitySection and
SettingsUpdatesSection while checking those files as instructed.

* fix(quick): hide/align 'merge with above' correctly on the audio source rows

* fix(settings): ExoSelect shows a placeholder instead of going blank

Microphone device rendered as an empty box. The dev machine has a real
capture device (AudioDiscovery reports inputs:1), so options was not
empty -- the fresh default preset simply has no mic device pinned
(selected_mic_device_id is nullopt), and that empty value matched
nothing in the options list. ExoSelect's currentIndex went to -1 and
QComboBox's displayText for index -1 is empty, so the control showed
no text at all.

ExoSelect now falls back to a muted, italic placeholder whenever
currentIndex is -1 -- covering both an unmatched value and a genuinely
empty options list -- instead of relying on displayText alone. The
microphone device select supplies a contextual '(no microphone)'
string; other callers keep the generic default.

* fix(quick): microphone post-processing disclosure is a chevron, not a button

* fix(quick): microphone post-processing disclosure is keyboard-reachable and accessible

* fix(quick): number fields with a unit suffix no longer reset on blur

* feat(hotkeys): ship every hotkey unset, remove the Alt+F9 default

PersistedAppSettings::hotkey_bindings carried its own literal Alt+F9
default, independent of GlobalHotkeyService::DefaultBinding() and fed
straight into LoadFromStrings() on first run. Left alone, Togg